--- a/css/style.css
+++ b/css/style.css
@@ -487,10 +487,25 @@ nav {
         transform: rotate(360deg);
       }
   }  
+  .contact_form_Sec {
+    box-shadow: 0px 0px 10px rgb(0 0 0 / 30%);
+    padding: 45px;
+    /* margin-top: -7%; */
+}
 @media screen and (max-width: 575px){
 .app_outer {
     flex-wrap: wrap;
     justify-content: start !important;
+}
+.mgbtm
+{
+    margin-bottom: -20px !important;
+}
+.griddisp
+{
+    display: grid !important;
+    margin-right: 26% !important;
+    margin-top: 3% !important;
 }
 .fixed-top {
     position: fixed;
