--- a/css/style.css
+++ b/css/style.css
@@ -560,6 +560,9 @@ nav {
     flex-wrap: wrap;
     justify-content: start !important;
 }
+.mllft{
+    margin-left: 0px !important;
+}
 .mobile{
     margin-top: -4%;
 }
